--- a/hmmcopy/meta.yaml
+++ b/hmmcopy/meta.yaml
@@ -5,7 +5,7 @@ source:
   fn: HMMcopy_1.12.0.tar.gz
   url: http://bioconductor.org/packages/release/bioc/src/contrib/HMMcopy_1.12.0.tar.gz
 build:
-  number: 0
+  number: 1
   rpaths:
     - lib/R/lib/
     - lib/
@@ -15,6 +15,7 @@ requirements:
     - 'bioconductor-iranges'
     - 'r >=3.1.0'
   run:
+    - 'hmmcopy_utils'
     - 'bioconductor-geneplotter'
     - 'bioconductor-iranges'
     - 'r >=3.1.0'
