delly build working for bioconda linux

--- a/delly/Makefile
+++ b/delly/Makefile
@@ -2,13 +2,10 @@ DEBUG ?= 0
 PARALLEL ?= 0
 STATIC ?= 0
 
-# Submodules
-PWD = $(shell pwd)
-BOOST_ROOT ?= $(shell get_boost_include)
-
 # Flags
 CXX=g++
-CXXFLAGS += -isystem ${BOOST_ROOT} -pedantic -W -Wall -Wno-unknown-pragmas
+CXXFLAGS += -pedantic -W -Wall -Wno-unknown-pragmas
+LDFLAGS += -lboost_iostreams -lboost_filesystem -lboost_system -lboost_program_options -lboost_date_time 
 
 # Additional flags for release/debug
 ifeq (${PARALLEL}, 1)
@@ -19,9 +16,9 @@ endif
 
 # Additional flags for release/debug
 ifeq (${STATIC}, 1)
-	LDFLAGS += -pthread -lhts -lz -lbz2
+	LDFLAGS += -static -static-libgcc -pthread -lhts -lz
 else
-	LDFLAGS += -lhts -lz -Wl,-rpath,${SEQTK_ROOT},-rpath,${BOOST_ROOT}/stage/lib
+	LDFLAGS += -lhts -lz -Wl,-rpath,-rpath
 endif
 ifeq (${DEBUG}, 1)
 	CXXFLAGS += -g -O0 -fno-inline -DDEBUG
@@ -29,17 +26,11 @@ else ifeq (${DEBUG}, 2)
 	CXXFLAGS += -g -O0 -fno-inline -DPROFILE
 	LDFLAGS += -lprofiler -ltcmalloc
 else
-	CXXFLAGS += -O3 -funroll-loops -DNDEBUG
+	CXXFLAGS += -O3 -funroll-loops --fast-math -DNDEBUG
 endif
 
-
-# External sources
+# Delly sources
 DELLYSOURCES = $(wildcard src/*.h) $(wildcard src/*.cpp)
-BOOSTSOURCES += $(shell get_boost_sources iostreams) 
-BOOSTSOURCES += $(shell get_boost_sources filesystem) 
-BOOSTSOURCES += $(shell get_boost_sources system) 
-BOOSTSOURCES += $(shell get_boost_sources program_options) 
-BOOSTSOURCES += $(shell get_boost_sources date_time) 
 
 # Targets
 TARGETS = src/delly src/extract src/cov src/iover src/stats
@@ -47,7 +38,7 @@ TARGETS = src/delly src/extract src/cov src/iover src/stats
 all:   	$(TARGETS)
 
 src/delly: $(DELLYSOURCES)
-	$(CXX) $(CXXFLAGS) $@.cpp $(BOOSTSOURCES) -o $@ $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) $@.cpp -o $@ $(LDFLAGS)
 
 src/extract: $(DELLYSOURCES)
 	$(CXX) $(CXXFLAGS) $@.cpp -o $@ $(LDFLAGS)
@@ -62,6 +53,4 @@ src/stats: $(DELLYSOURCES)
 	$(CXX) $(CXXFLAGS) $@.cpp -o $@ $(LDFLAGS)
 
 clean:
-	cd src/htslib && make clean
-	cd src/modular-boost && ./b2 --clean-all
 	rm -f $(TARGETS) $(TARGETS:=.o)
