--- a/delly/meta.yaml
+++ b/delly/meta.yaml
@@ -8,6 +8,7 @@ source:
 
 requirements:
   build:
+    - boost_lib
     - python
     - htslib
     - banyan
@@ -15,6 +16,7 @@ requirements:
     - numpy
 
   run:
+    - boost_lib
     - python
     - htslib
     - banyan
