--- a/boost_lib/meta.yaml
+++ b/boost_lib/meta.yaml
@@ -6,6 +6,10 @@ source:
   fn: boost_1_60_0.tar.gz
   url: https://sourceforge.net/projects/boost/files/boost/1.60.0/boost_1_60_0.tar.gz
 
+requirements:
+  build:
+    - python
+
 build:
   number: 1
 
