--- a/delly/meta.yaml
+++ b/delly/meta.yaml
@@ -1,19 +1,10 @@
 package:
   name: delly
-  version: '0.7.2'
+  version: '0.7.3'
 
 source:
-  fn: delly_v0.7.2.tar.gz
-  url: https://github.com/tobiasrausch/delly/archive/v0.7.2.tar.gz
-
-requirements:
-  build:
-    - boost_lib
-    - htslib
-
-  run:
-    - boost_lib
-    - htslib
+  fn: delly
+  url: https://github.com/tobiasrausch/delly/releases/download/v0.7.3/delly_v0.7.3_linux_x86_64bit
 
 build:
   number: 1
