--- a/bicseq2-seg/meta.yaml
+++ b/bicseq2-seg/meta.yaml
@@ -6,6 +6,9 @@ source:
   url: http://www.math.pku.edu.cn/teachers/xirb/downloads/software/BICseq2/BICseq2/NBICseq-seg_v0.7.2.tar.gz
   fn: NBICseq-seg_v0.7.2.tar.gz
 
+build:
+  number: 2
+
 requirements:
   build:
   run:
