--- a/boost_lib/meta.yaml
+++ b/boost_lib/meta.yaml
@@ -1,14 +1,15 @@
 package:
   name: boost_lib
-  version: '1.63.0'
+  version: '1.54.0'
 
 source:
-  fn: boost_1_63_0.tar.gz
-  url: https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.tar.gz
+  fn: boost_1_54_0.tar.gz
+  url: https://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.tar.gz
 
 requirements:
   build:
     - python
+    - bzip2
 
 build:
   number: 1
