--- a/vizutils/meta.yaml
+++ b/vizutils/meta.yaml
@@ -1,11 +1,13 @@
 package:
   name: vizutils
-  version: 1.1.0
+  version: 1.2
 
 source:
-  git_rev: add-parsers
-  #git_url: https://svn.bcgsc.ca/bitbucket/scm/~dgrewal/vizutils.git
-  git_url: /home/tyler/projects/pypelines/tools/vizutils
+  git_rev: master
+  git_url: https://svn.bcgsc.ca/bitbucket/scm/~dgrewal/vizutils.git
+
+build:
+  number: 1
 
 requirements:
   host:
@@ -24,6 +26,7 @@ test:
     - vizutils_parse_strelka --help
     - vizutils_parse_destruct --help
     - vizutils_parse_lumpy --help
+    - vizutils_filter_low_mappability --help
 
 about:
   home: https://svn.bcgsc.ca/bitbucket/scm/~dgrewal/vizutils
