--- a/hmmcopy_single_cell/meta.yaml
+++ b/hmmcopy_single_cell/meta.yaml
@@ -15,10 +15,12 @@ requirements:
     - 'bioconductor-iranges'
     - 'r >=3.1.0'
   run:
-    - 'hmmcopy_utils'
     - 'bioconductor-geneplotter'
     - 'bioconductor-iranges'
     - 'r >=3.1.0'
+    - 'r-data.table'
+    - 'r-getopt'
+    - 'r-plyr'
 test:
   commands:
     - '$R -e "library(''HMMcopy'')"'
