--- a/titan_wgs/meta.yaml
+++ b/titan_wgs/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: bioconductor-titan
+  name: titan_wgs
   version: 1.10.0
 source:
   fn: TitanCNA_1.10.0.tar.gz
@@ -38,10 +38,8 @@ requirements:
 test:
   commands:
     - '$R -e "library(''TitanCNA'')"'
-    - 'createTITANsegmentfiles.pl -h | cat'
-    - 'parse_titan_segments.py -h'
 about:
-  home: http://bioconductor.org/packages/HMMcopy/
+  home: http://bioconductor.org/packages/TitanCNA/
   summary: 'Corrects GC and mappability biases for readcounts (i.e. coverage) in non-overlapping windows of fixed length
     for single whole genome samples, yielding a rough estimate of copy number for furthur analysis. Designed for rapid
     correction of high coverage whole genome tumour and normal samples.'
