--- a/titan_wgs_utils/meta.yaml
+++ b/titan_wgs_utils/meta.yaml
@@ -2,8 +2,11 @@ package:
   name: titan_wgs_utils
   version: 1.10.0
 source:
-  fn: TitanCNA_1.10.0.tar.gz
-  url: https://bioconductor.riken.jp/packages/3.3/bioc/src/contrib/TitanCNA_1.10.0.tar.gz
+  - git_url: https://github.com/shahcompbio/titan_wgs_utils.git
+    git_rev: v0.0.1
+    folder: titan_wgs_utils
+  - fn: TitanCNA_1.10.0.tar.gz
+    url: https://bioconductor.riken.jp/packages/3.3/bioc/src/contrib/TitanCNA_1.10.0.tar.gz
 build:
   number: 2
   rpaths:
