--- a/pseudo_bulk_qc_html_report/meta.yaml
+++ b/pseudo_bulk_qc_html_report/meta.yaml
@@ -12,11 +12,15 @@ requirements:
     - 'r-tidyverse'
     - 'r-data.table'
     - 'r-rmarkdown'
+    - 'pandoc'
+    - 'r-dt'
   run:
     - 'r >=3.1.0'
     - 'r-tidyverse'
     - 'r-data.table'
     - 'r-rmarkdown'
+    - 'pandoc'
+    - 'r-dt'
 test:
   commands:
     - 'R -e "library(tidyverse)"'
