cna annotation + germline/somatic labeling

--- a/wgs_qc_html_report/meta.yaml
+++ b/wgs_qc_html_report/meta.yaml
@@ -1,6 +1,10 @@
 package:
   name: wgs_qc_html
   version: '0.0.1'
+source:
+  fn: maftools_2.7.0.tar.gz
+  url:
+    - https://www.bioconductor.org/packages/devel/bioc/src/contrib/maftools_2.7.0.tar.gz
 build:
   number: 2
   rpaths:
@@ -8,15 +12,18 @@ build:
     - lib/
 requirements:
   build:
-    - 'r >=3.1.0'
-    - 'r-rmarkdown'
+    - r
+    - r-data.table
+    - r-rcolorbrewer
   run:
-    - 'r >=3.1.0'
-    - 'r-rmarkdown'
+    - r >=3.3.0
+    - r-rmarkdown
+    - r-data.table
+    - r-rcolorbrewer
 test:
   commands:
     - 'R -e "library(rmarkdown)"'
-
+    - 'R -e "library(maftools)"'
 
 about:
   home: http://shahlab.ca
