--- a/wgs_qc_html_report/meta.yaml
+++ b/wgs_qc_html_report/meta.yaml
@@ -15,17 +15,19 @@ requirements:
     - r
     - r-data.table
     - r-rcolorbrewer
+    - 'pandoc'
+
   run:
     - r >=3.3.0
     - r-rmarkdown
     - r-data.table
     - r-rcolorbrewer
+    - 'pandoc'
+
 test:
   commands:
     - 'R -e "library(rmarkdown)"'
     - 'R -e "library(maftools)"'
 
 about:
-  home: http://shahlab.ca
-  summary: ''
-
+  home: h
